@@ -1,3 +1,8 @@
+Wed Mar 31 06:51:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
+          Fixed variable not used arnings
+
 Tue Mar 30 19:32:19 UTC 2010  Olli Savia  <ops@iki.fi>
 
         * examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp:
